--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "prefix": "",
+  "prefix": "$",
   "sahip": "732735517904470086",
-  "token": ""
+  "token": "ODU5NjM4MDQ5MjgwNzUzNjg1.YNvmUg.wtBoFdhjNJE-WG39vdZ8HK9EywU"
 }
